test/sema/assignment-result.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    var a = 1;

    // CHECK: [[@LINE+1]]:7: error: cannot assign '(int a)' to 'int'
    a = (a = 2);

    // CHECK: [[@LINE+1]]:10: error: type 'void' is not convertible to boolean
    if a = 2 {}
}
